[gd_scene load_steps=2 format=3 uid="uid://ca1dh5naxbtpd"]

[ext_resource type="Script" uid="uid://cl3m2x51hcmyt" path="res://Flashcard.gd" id="1_6nt82"]

[node name="FlashcardUI" type="CanvasLayer"]

[node name="Node2D" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_6nt82")

[node name="ListSelect" type="LineEdit" parent="Node2D"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ConfirmButton" type="Button" parent="Node2D"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="QuestionLabel" type="Label" parent="Node2D"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="AnswerInput" type="LineEdit" parent="Node2D"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubmitButton" type="Button" parent="Node2D"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="ResultLabel" type="Label" parent="Node2D"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
