extends MarginContainer

var correct_answers = 0

signal flashcards_done

var list1 = {
	"あう | 会う" : "to meet",
	"あおい | 青い" : "blue",
	"あか | 赤" : "red",
	"あかい | 赤い" : "red",
	"あき | 秋" : "autumn",
	"あく" : "to open",
	"あける" : "to open",
	"あげる" : "to give",
	"あさ" : "morning",
	"あさごはん" : "breakfast",
	"あさって" : "day after tomorrow",
	"あし | 足" : "leg",
	"あした" : "tomorrow",
	"あそこ" : "over there",
	"あそぶ" : "to play",
	"あたたかい" : "warm",
	"あたま | 頭" : "head",
	"あたらしい | 新しい" : "new",
	"あちら" : "over there",
	"あつい" : "hot",
	"あっち" : "over there",
	"あと" : "after",
	"あなた" : "you",
	"あに | 兄" : "older brother",
	"あね | 姉" : "older sister",
	"あの" : "that over there",
	"あのう" : "well",
	"アパート" : "apartment",
	"あびる" : "to take a shower",
	"あぶない" : "dangerous",
	"あまい" : "sweet",
	"あまり" : "not much",
	"あめ | 雨" : "rain",
	"あめ | 飴" : "candy",
	"あらう" : "to wash",
	"ある" : "to exist",
	"あるく" : "to walk",
	"あれ" : "that over there",
	"いい | 良い" : "good",
	"いう | 言う" : "to say",
	"いえ | 家" : "house",
	"いかが" : "how",
	"いく | 行く" : "to go",
	"いくつ" : "how many",
	"いくら" : "how much",
	"いけ | 池" : "pond",
	"いしゃ | 医者" : "doctor",
	"いす" : "chair",
	"いそがしい" : "busy",
	"いたい" : "painful",
	"いち | 一" : "one",
	"いちにち | 一日" : "one day",
	"いちばん" : "best",
	"いつ" : "when",
	"いつか" : "someday",
	"いっしょ" : "together",
	"いつつ | 五つ" : "five",
	"いつも" : "always",
	"いぬ | 犬" : "dog",
	"いま | 今" : "now",
	"いみ | 意味" : "meaning",
	"いもうと | 妹" : "younger sister",
	"いや" : "unpleasant",
	"いりぐち | 入口" : "entrance",
	"いる" : "to exist",
	"いれる" : "to put in",
	"いろ | 色" : "colour",
	"いろいろ" : "various",
	"うえ | 上" : "above",
	"うしろ | 後ろ" : "behind",
	"うすい" : "thin",
	"うた | 歌" : "song",
	"うたう | 歌う" : "to sing",
	"うち" : "house",
	"うまれる | 生まれる" : "to be born",
	"うみ | 海" : "sea",
	"うる" : "to sell",
	"うるさい" : "noisy",
	"うわぎ | 上着" : "jacket",
	"え | 絵" : "picture",
	"えいが | 映画" : "movie",
	"えいがかん | 映画館" : "cinema",
	"えいご | 英語" : "english",
	"えき | 駅" : "station",
	"エレベーター" : "elevator",
	"えんぴつ" : "pencil",
	"おいしい" : "delicious",
	"おおい | 多い" : "many",
	"おおきい | 大きい" : "big",
	"おおきな | 大きな" : "big",
	"おおぜい" : "many people",
	"おかあさん" : "mother",
	"おかし | お菓子" : "sweets",
	"おかね | お金" : "money",
	"おきる" : "to get up",
	"おく" : "to put/place",
	"おくさん" : "wife",
	"おくる" : "to send",
	"おさけ | お酒" : "alcohol",
	"おさら | お皿" : "plate",
	"おじ | 伯父/叔父" : "uncle",
	"おじいさん" : "grandfather",
	"おしえる" : "to teach",
	"おす" : "to push",
	"おそい" : "slow",
	"おちゃ | お茶" : "tea",
	"おてあらい | お手洗い" : "toilet",
	"おとうさん" : "father",
	"おとうと | 弟" : "younger brother",
	"おとこ | 男" : "man",
	"おとこのこ | 男の子" : "boy",
	"おととい" : "day before yesterday",
	"おととし" : "year before last",
	"おとな | 大人" : "adult",
	"おなじ | 同じ" : "same",
	"おにいさん" : "older brother",
	"おねえさん" : "older sister",
	"おの | 斧" : "axe",
	"おば | 伯母/叔母" : "aunt",
	"おばあさん" : "grandmother",
	"おふろ | お風呂" : "bath",
	"おべんとう | お弁当" : "lunchbox",
	"おぼえる" : "to remember",
	"おまわりさん" : "police officer",
	"おもい | 重い" : "heavy",
	"おもしろい" : "interesting",
	"およぐ | 泳ぐ" : "to swim",
	"おりる" : "to get off",
	"おわる" : "to finish",
	"おんな | 女" : "woman",
	"おんなのこ | 女の子" : "girl",
	"がいこく | 外国" : "foreign country",
	"がいこくじん | 外国人" : "foreigner",
	"かいしゃ | 会社" : "company",
	"かいだん | 階段" : "stairs",
	"かいもの | 買い物" : "shopping",
	"かう | 買う" : "to buy",
	"かえす" : "to return",
	"かえる" : "go back",
	"かお | 顔" : "face",
	"かかる" : "to take",
	"かぎ" : "key",
	"かぎをかける" : "to lock",
	"かく" : "to write",
	"がくせい | 学生" : "student",
	"かける" : "to hang",
	"かさ | 傘" : "umbrella",
	"かす" : "to lend",
	"かぜ | 風" : "wind",
	"かぜ | 風邪" : "a cold",
	"かた | 方" : "person",
	"かたかな | カタカナ" : "katakana",
	"がっこう | 学校" : "school",
	"カップ" : "cup",
	"かてい | 家庭" : "home",
	"かど | 角" : "corner",
	"かばん" : "bag",
	"かびん | 花瓶" : "vase",
	"かぶる" : "to put on",
	"かみ | 紙" : "paper",
	"かようび | 火曜日" : "Tuesday",
	"からい" : "spicy",
	"からだ | 体" : "body",
	"かりる" : "to borrow",
	"かるい" : "light",
	"カレンダー" : "calendar",
	"かわ | 川" : "river",
	"かわいい" : "cute",
	"かんじ | 漢字" : "kanji",
	"き | 木" : "tree",
	"きいろ | 黄色" : "yellow",
	"きいろい | 黄色い" : "yellow",
	"きえる" : "to disappear",
	"きく | 聞く" : "to listen",
	"きた | 北" : "north",
	"ギター" : "guitar",
	"きたない" : "dirty",
	"きっさてん | 喫茶店" : "cafe",
	"きって | 切手" : "stamp",
	"きっぷ | 切符" : "ticket",
	"きのう" : "yesterday",
	"きのえだ | 木の枝" : "tree branch",
	"きのした | 木の下" : "under a tree",
	"きびしい" : "strict",
	"きゅう | 九" : "nine",
	"ぎゅうにく | 牛肉" : "beef",
	"ぎゅうにゅう | 牛乳" : "milk",
	"きょう | 今日" : "today",
	"きょうしつ | 教室" : "classroom",
	"きょうだい" : "siblings",
	"きょねん" : "last year",
	"きらい | 嫌い" : "dislike",
	"きる | 切る" : "to cut",
	"きる | 着る" : "to wear",
	"きれい" : "pretty",
	"きんようび | 金曜日" : "Friday",
	"く | 九" : "nine",
	"くすり | 薬" : "medicine",
	"くすりをのむ | 薬を飲む" : "to take medicine",
	"くだもの | 果物" : "fruit",
	"くち | 口" : "mouth",
	"くつ | 靴" : "shoes",
	"くつした | 靴下" : "socks",
	"くに | 国" : "country",
	"くも | 雲" : "cloud",
	"くもり | 曇り" : "cloudy",
	"くもる | 曇る" : "to become cloudy",
	"くらい | 暗い" : "dark",
	"クラス" : "class",
	"グラム" : "gram",
	"くる" : "to come",
	"くるま | 車" : "car",
	"くろ | 黒" : "black",
	"くろい | 黒い" : "black",
	"けいかん | 警官" : "police officer",
	"けさ" : "this morning",
	"けす | 消す" : "to turn off",
	"けっこう" : "enough",
	"けっこん" : "marriage",
	"けっこんする" : "to marry",
	"けっして" : "never",
	"けむり | 煙" : "smoke",
	"けんきゅうしつ | 研究室" : "research room",
	"けんこう | 健康" : "health",
	"げんかん | 玄関" : "entrance",
	"げんき | 元気" : "healthy",
	"こ | 子" : "child",
	"ご | 五" : "five",
	"こうえん | 公園" : "park",
	"こうさてん | 交差点" : "intersection",
	"こうちゃ | 紅茶" : "black tea",
	"こうばん | 交番" : "police box",
	"こえ | 声" : "voice",
	"コート" : "coat",
	"コーヒー" : "coffee",
	"ここ" : "here",
	"ごご | 午後" : "afternoon",
	"ここのか | 九日" : "nine days",
	"ごぜん | 午前" : "morning",
	"こたえる | 答える" : "to answer",
	"ごちそうさま" : "thank you for the meal",
	"こちら" : "this way",
	"こっち" : "this way",
	"コップ" : "cup",
	"ことし" : "this year",
	"ことば | 言葉" : "word",
	"こども | 子供" : "child",
	"この" : "this",
	"ごはん | ご飯" : "rice",
	"こまる | 困る" : "to be troubled",
	"これ" : "this",
	"これくらい" : "about this much",
	"こんげつ | 今月" : "this month",
	"こんしゅう | 今週" : "this week",
	"こんな" : "such",
	"こんばんは" : "good evening",
	"こんや | 今夜" : "tonight",
	"さあ" : "well then",
	"さいふ | 財布" : "wallet",
	"さかな | 魚" : "fish",
	"さき | 先" : "ahead",
	"さく" : "to bloom",
	"さくぶん | 作文" : "composition",
	"さす" : "to open (umbrella)",
	"ざっし | 雑誌" : "magazine",
	"さとう | 砂糖" : "sugar",
	"さむい | 寒い" : "cold",
	"さら | 皿" : "plate",
	"さる" : "monkey",
	"さわぐ" : "to make noise",
	"さん" : "Mr./Ms.",
	"さんぽする" : "to take a walk",
	"し | 四" : "four",
	"しお | 塩" : "salt",
	"しかし" : "however",
	"じかん | 時間" : "time",
	"しごと | 仕事" : "job",
	"しごとする | 仕事する" : "to work",
	"じしょ | 辞書" : "dictionary",
	"しずか | 静か" : "quiet",
	"した | 下" : "under",
	"しち | 七" : "seven",
	"しつもん | 質問" : "question",
	"しつもんする" : "to ask a question",
	"じてんしゃ | 自転車" : "bicycle",
	"じどうしゃ | 自動車" : "automobile",
	"しぬ | 死ぬ" : "to die",
	"じびき | 字引" : "dictionary",
	"しまる | 閉まる" : "to close",
	"しめる | 閉める" : "to close",
	"しめる | 締める" : "to fasten",
	"しゃしん | 写真" : "photograph",
	"シャツ" : "shirt",
	"シャワー" : "shower",
	"シャワーをあびる" : "to take a shower",
	"じゅぎょう | 授業" : "lesson",
	"じょうず | 上手" : "skillful",
	"じょうぶ | 丈夫" : "strong",
	"しょうゆ" : "soy sauce",
	"しょくどう | 食堂" : "cafeteria",
	"しる | 知る" : "to know",
	"しろ | 白" : "white",
	"しろい | 白い" : "white",
	"しんぶん | 新聞" : "newspaper",
	"すいようび | 水曜日" : "Wednesday",
	"すう" : "to smoke",
	"スカート" : "skirt",
	"すき | 好き" : "like",
	"すく" : "to become less crowded",
	"すぐに" : "right away",
	"すこし | 少し" : "a little",
	"すずしい | 涼しい" : "cool (temperature)",
	"ストーブ" : "heater",
	"スプーン" : "spoon",
	"スポーツ" : "sports",
	"スポーツする" : "to play sports",
	"ズボン" : "trousers",
	"すむ | 住む" : "to live",
	"すわる | 座る" : "to sit",
	"せい | 背" : "height",
	"せいと | 生徒" : "pupil",
	"セーター" : "sweater",
	"せっけん" : "soap",
	"せびろ" : "suit",
	"せまい" : "narrow",
	"ゼロ" : "zero",
	"せん" : "thousand",
	"せんせい | 先生" : "teacher",
	"せんたく" : "laundry",
	"せんたくする" : "to do laundry",
	"ぜんぶ" : "all",
	"そうじ" : "cleaning",
	"そうじする" : "to clean",
	"そうして" : "and then",
	"そこ" : "there",
	"そちら" : "there",
	"そっち" : "there",
	"そと | 外" : "outside",
	"その" : "that",
	"そば" : "near",
	"そら | 空" : "sky",
	"それ" : "that",
	"それから" : "after that",
	"それでは" : "well then",
	"そんな" : "such",
	"たいしかん | 大使館" : "embassy",
	"だいがく | 大学" : "university",
	"だいがくせい | 大学生" : "university student",
	"たいせつ | 大切" : "important",
	"たいへん" : "tough",
	"たかい | 高い" : "tall/expensive",
	"たくさん" : "many",
	"タクシー" : "taxi",
	"だす | 出す" : "to take out",
	"たち" : "plural suffix",
	"たつ" : "to stand",
	"たて" : "vertical",
	"たてもの | 建物" : "building",
	"たのしい | 楽しい" : "fun",
	"たべる | 食べる" : "to eat",
	"たまご | 卵" : "egg",
	"だれ" : "who",
	"だれか" : "someone",
	"たんじょうび | 誕生日" : "birthday",
	"だんだん" : "gradually",
	"ちいさい | 小さい" : "small",
	"ちいさな | 小さな" : "small",
	"ちかい | 近い" : "near",
	"ちがう" : "to differ",
	"ちかく | 近く" : "nearby",
	"ちかてつ | 地下鉄" : "subway",
	"ちず | 地図" : "map",
	"ちち | 父" : "father",
	"ちゃいろ | 茶色" : "brown",
	"ちゃいろい | 茶色い" : "brown",
	"ちゃわん" : "rice bowl",
	"ちょっと" : "a little",
	"つかう | 使う" : "to use",
	"つかれる" : "to get tired",
	"つぎ | 次" : "next",
	"つく" : "to arrive",
	"つくえ | 机" : "desk",
	"つくる | 作る" : "to make",
	"つける" : "to turn on",
	"つとめる" : "to work for",
	"つまらない" : "boring",
	"つめたい | 冷たい" : "cold (to touch)",
	"つよい | 強い" : "strong",
	"て | 手" : "hand",
	"テーブル" : "table",
	"テープ" : "tape",
	"テープレコーダー" : "tape recorder",
	"テスト" : "test",
	"テストする" : "to test",
	"でかける" : "to go out",
	"できる" : "to be able to",
	"でぐち | 出口" : "exit",
	"テニス" : "tennis",
	"テニスする" : "to play tennis",
	"でる" : "to leave",
	"テレビ" : "television",
	"てんき | 天気" : "weather",
	"でんき | 電気" : "electricity",
	"でんしゃ | 電車" : "train",
	"でんわ | 電話" : "telephone",
	"でんわする" : "to call",
	"と" : "and",
	"ドア" : "door",
	"トイレ" : "toilet",
	"どう" : "how",
	"どうして" : "why",
	"どうぞ" : "please",
	"どうぶつ | 動物" : "animal",
	"どうも" : "thanks",
	"とおい | 遠い" : "far",
	"とおか | 十日" : "ten days",
	"ときどき | 時々" : "sometimes",
	"とけい | 時計" : "watch",
	"どこ" : "where",
	"ところ | 所" : "place",
	"とし | 年" : "year",
	"としょかん | 図書館" : "library",
	"どちら" : "which way",
	"どっち" : "which way",
	"とても" : "very",
	"どなた" : "who (polite)",
	"となり | 隣" : "next",
	"どの" : "which",
	"とぶ | 飛ぶ" : "to fly",
	"とまる | 泊まる" : "to stay overnight",
	"ともだち | 友達" : "friend",
	"どようび | 土曜日" : "Saturday",
	"とる | 取る" : "to take",
	"とる | 撮る" : "to take (a photo)",
	"どれ" : "which",
	"どんな" : "what kind of",
	"ない" : "not exist",
	"なか | 中" : "inside",
	"ながい | 長い" : "long",
	"なく" : "to cry",
	"なつ | 夏" : "summer",
	"なつやすみ | 夏休み" : "summer vacation",
	"なな | 七" : "seven",
	"なに | 何" : "what",
	"なのか | 七日" : "seven days",
	"なまえ | 名前" : "name",
	"ならう | 習う" : "to learn",
	"ならぶ" : "to line up",
	"なる" : "to become",
	"に" : "two",
	"にぎやか" : "lively",
	"にく | 肉" : "meat",
	"にし | 西" : "west",
	"にちようび | 日曜日" : "Sunday",
	"にもつ | 荷物" : "luggage",
	"ニュース" : "news",
	"にわ | 庭" : "garden",
	"ぬぐ" : "to take off (clothes)",
	"ぬるい" : "lukewarm",
	"ねこ | 猫" : "cat",
	"ねる | 寝る" : "to sleep",
	"のぼる" : "to climb",
	"のみもの | 飲み物" : "drink",
	"のむ | 飲む" : "to drink",
	"のる" : "to ride",
	"はい" : "yes",
	"はいる | 入る" : "to enter",
	"はがき" : "postcard",
	"はく" : "to wear (shoes/pants)",
	"はこ | 箱" : "box",
	"おはし" : "chopsticks",
	"はし" : "bridge",
	"はじまる" : "to begin",
	"はじめ" : "beginning",
	"はじめて" : "for the first time",
	"はしる" : "to run",
	"バス" : "bus",
	"バター" : "butter",
	"はたち" : "twenty years old",
	"はたらく" : "to work",
	"はち | 八" : "eight",
	"はつか | 二十日" : "twenty days",
	"はな | 花" : "flower",
	"はな | 鼻" : "nose",
	"はなし | 話" : "story",
	"はなす | 話す" : "to speak",
	"はやい | 早い" : "early",
	"はやい | 速い" : "fast",
	"はる | 春" : "spring",
	"はる" : "to stick",
	"はれ | 晴れ" : "clear weather",
	"はれる | 晴れる" : "to clear up",
	"はん | 半" : "half",
	"ばん | 晩" : "evening",
	"パン" : "bread",
	"ハンカチ" : "handkerchief",
	"ばんごはん | 晩ご飯" : "dinner",
	"はんぶん | 半分" : "half",
	"ひがし | 東" : "east",
	"ひく" : "to play (instrument)",
	"ひく | 引く" : "to pull",
	"ひくい | 低い" : "low",
	"ひこうき | 飛行機" : "airplane",
	"ひだり | 左" : "left",
	"ひと | 人" : "person",
	"ひとつ | 一つ" : "one",
	"ひとつき | 一月" : "one month",
	"ひとり | 一人" : "one person",
	"ひま" : "free time",
	"ひゃく | 百" : "hundred",
	"びょういん | 病院" : "hospital",
	"びょうき | 病気" : "illness",
	"ひらがな | 平仮名" : "hiragana",
	"ひる | 昼" : "noon",
	"ひるごはん | 昼ご飯" : "lunch",
	"ひろい | 広い" : "spacious",
	"フィルム" : "film",
	"ふく | 服" : "clothes",
	"ふく" : "to blow",
	"ふたつ | 二つ" : "two",
	"ぶたにく | 豚肉" : "pork",
	"ふたり | 二人" : "two people",
	"ふつか | 二日" : "two days",
	"ぶっか | 物価" : "prices",
	"ぶんしょう | 文章" : "sentence",
	"ページ" : "page",
	"へた | 下手" : "unskillful",
	"ベッド" : "bed",
	"へや | 部屋" : "room",
	"へん" : "area",
	"べんきょう | 勉強" : "study",
	"べんきょうする" : "to study",
	"ペン" : "pen",
	"ほか" : "other",
	"ポケット" : "pocket",
	"ほしい" : "want",
	"ポスト" : "postbox",
	"ホテル" : "hotel",
	"ほん | 本" : "book",
	"ほんだな | 本棚" : "bookshelf",
	"ほんとう" : "truth",
	"ほんや | 本屋" : "bookstore",
	"まいあさ | 毎朝" : "every morning",
	"まいしゅう | 毎週" : "every week",
	"まいにち | 毎日" : "every day",
	"まいばん | 毎晩" : "every night",
	"まえ | 前" : "before",
	"まがる" : "to turn",
	"まずい" : "unappetizing",
	"また" : "again",
	"まだ" : "still",
	"まち | 町" : "town",
	"まつ" : "to wait",
	"まど | 窓" : "window",
	"まるい | 丸い" : "round",
	"まん | 万" : "ten thousand",
	"まんねんひつ | 万年筆" : "fountain pen",
	"みがく" : "to brush/polish",
	"みぎ | 右" : "right",
	"みじかい | 短い" : "short",
	"みせ | 店" : "shop",
	"みせる" : "to show",
	"みち | 道" : "road",
	"みっか | 三日" : "three days",
	"みつ" : "three",
	"みなさん" : "everyone",
	"みなみ | 南" : "south",
	"みみ | 耳" : "ear",
	"みる | 見る" : "to see",
	"みんな" : "everyone",
	"むいか | 六日" : "six days",
	"むこう" : "over there",
	"むずかしい | 難しい" : "difficult",
	"むら | 村" : "village",
	"め | 目" : "eye",
	"めがね | 眼鏡" : "glasses",
	"メートル" : "metre",
	"もう" : "already",
	"もくようび | 木曜日" : "Thursday",
	"もしもし" : "hello (phone)",
	"もつ" : "to hold",
	"もっと" : "more",
	"もん | 門" : "gate",
	"もんだい | 問題" : "problem",
	"やおや | 八百屋" : "greengrocer",
	"やさい | 野菜" : "vegetable",
	"やさしい" : "kind"
}
var list2 = {
	"あいさつ" : "greeting",
	"あかるい" : "bright",
	"あきらめる" : "to give up",
	"あの" : "that over there",
	"あぶない" : "dangerous",
	"あんぜん" : "safety",
	"いう | 言う" : "to say",
	"という" : "to be called",
	"いっしょうけんめい" : "as hard as one can",
	"いる" : "to need",
	"いれる" : "to put in",
	"うんてん" : "driving",
	"うんてんする" : "to drive",
	"えらぶ" : "to choose",
	"おうえんする" : "to support",
	"おおい" : "a lot",
	"おしえる" : "to teach",
	"おとな | 大人" : "adult",
	"おもいだす" : "to recall",
	"おもいで" : "memories",
	"おもう | 思う" : "to think",
	"おりる" : "to get off",
	"がいこく | 外国" : "foreign country",
	"がいこくご | 外国語" : "foreign language",
	"かたづける" : "to tidy up",
	"がっかりする" : "to be disappointed",
	"がっき" : "school term",
	"かならず" : "certainly",
	"かみ" : "paper",
	"かわる" : "to change",
	"かんけい" : "connection",
	"かんどうする" : "to be moved",
	"カンニングする" : "to cheat in a test",
	"きそく" : "rule",
	"きもちいい" : "to feel good",
	"きゅうしょく" : "meal provided by an organisation",
	"きょういく" : "education",
	"きょうかしょ" : "textbook",
	"きょうみ" : "interest",
	"きょうみがある" : "to be interested in",
	"きんじょ" : "neighbourhood",
	"くうき" : "air",
	"くらい" : "dark",
	"くらべる" : "to compare",
	"グループ" : "group",
	"けいざい" : "economy",
	"けす" : "to turn off",
	"けっか" : "result",
	"こうりゅうする" : "to interact",
	"こたえ" : "answer",
	"こたえる" : "to answer",
	"ことば" : "language",
	"ことわる" : "to reject",
	"この" : "this",
	"コミュニティ" : "community",
	"これから" : "from now on",
	"さいきん" : "recently",
	"さいご" : "last",
	"さいしょ" : "first",
	"さくぶん" : "essay",
	"さそう" : "to invite",
	"さびしい" : "lonely",
	"しけんにおちる" : "to fail an exam",
	"しけんにとおる" : "to pass an exam",
	"しけんをうける" : "to sit an exam",
	"しつもん" : "question",
	"しつもんする" : "to ask a question",
	"じどうはんばいき" : "vending machine",
	"しゅうがくりょこう" : "school trip",
	"しゅうかん" : "custom",
	"しふく" : "mufti",
	"じゆうじかん" : "leisure time",
	"しゅっしん" : "place of origin",
	"しゅわ | 手話" : "sign language",
	"じゅんび" : "preparation",
	"じゅんびする" : "to prepare",
	"しんじる" : "to believe",
	"しんぱいする" : "to worry",
	"すぐ" : "immediately",
	"すくない | 少ない" : "few",
	"すごす" : "to spend time",
	"ずっと" : "much more",
	"すてる" : "to throw away",
	"ストレス" : "stress",
	"せいかつ" : "way of life",
	"せいせき" : "results",
	"せつめい" : "explanation",
	"せつめいする" : "to explain",
	"せんしゅ" : "athlete",
	"そつぎょうしき" : "graduation ceremony",
	"そつぎょうする" : "to graduate",
	"その" : "that",
	"そら" : "sky",
	"たいいくさい" : "sports festival",
	"たすける" : "to help",
	"ただしい" : "correct",
	"たとえば" : "for example",
	"たのしみにする" : "to look forward to",
	"たのしむ" : "to enjoy",
	"たのむ" : "to request",
	"チーム" : "team",
	"つき | 月" : "moon",
	"つぎ" : "next",
	"つける" : "to turn on",
	"つつむ" : "to wrap",
	"テーマパーク" : "theme park",
	"てつだう" : "to give a hand",
	"でる" : "to attend",
	"でんき" : "electricity",
	"どうやって" : "in what manner",
	"どきどきする" : "to be nervous",
	"とくべつ" : "special",
	"どの" : "which",
	"ともだちができる | 友だちができる" : "to make a friend",
	"なくなる" : "to pass away",
	"なつかしい" : "to fondly remember",
	"なやむ" : "to be troubled",
	"ならぶ" : "to line up",
	"なれる" : "to become used to",
	"にている" : "to look alike",
	"にゅうがくする" : "to start school",
	"にゅうがくしき" : "welcoming ceremony",
	"にゅうがくしけん" : "entrance examination",
	"にんきがある" : "to be popular",
	"にんきがでる" : "to become popular",
	"ねだん" : "price",
	"はじめ" : "beginning",
	"はじめる" : "to start",
	"ばしょ" : "place",
	"はしる" : "to run",
	"はずかしい" : "embarrassed",
	"はなしあう" : "to discuss",
	"はらう" : "to pay",
	"ひきわけ" : "draw",
	"びっくりする" : "to be surprised",
	"ひつよう" : "necessary",
	"ふえる" : "to increase",
	"ふくろ" : "sack",
	"プラスチック" : "plastic",
	"ふるさと" : "place you belong",
	"へらす" : "to decrease",
	"へんじ" : "response",
	"へんじする" : "to respond",
	"ほか" : "other",
	"ほし" : "star",
	"ほとんど" : "almost all",
	"ボランティア" : "volunteer",
	"ほんとう" : "true",
	"まいつき" : "every month",
	"まいねん | まいとし" : "every year",
	"まもる" : "to obey",
	"むり" : "impossible",
	"めずらしい" : "rare",
	"メンバー" : "member",
	"もちろん" : "of course",
	"もったいない" : "wasteful",
	"もんだい" : "problem",
	"やめる" : "to quit",
	"ゆっくりする" : "to relax",
	"リサイクルする" : "to recycle",
	"わかい" : "young",
	"わくわくする" : "to be excited",
	"わらう" : "to laugh"
}
var list3 = {
	"アイデンティティ" : "identity",
	"アウトドア" : "outdoors",
	"あがる | 上がる" : "to rise",
	"あんないする" : "to guide",
	"いけん" : "opinion",
	"いちにちじゅう | 一日中" : "all day",
	"いつか" : "someday",
	"いつでも" : "any time",
	"いみん" : "immigrant",
	"インフルエンサー" : "influencer",
	"うえる" : "to plant",
	"えいきょう" : "influence",
	"えいきょうする" : "to have an influence",
	"エコ（な）" : "ecology",
	"おと | 音" : "sound",
	"おとしより" : "elderly person",
	"おもいやり | 思いやり" : "empathy",
	"おんせん" : "hot spring",
	"おんだんか" : "warming",
	"かいしゃ | 会社" : "company",
	"かえる" : "to change",
	"かざん | 火山" : "volcano",
	"ガソリン" : "petrol",
	"かみ(さま)" : "deity",
	"かんがえる" : "to consider",
	"かんきょう" : "environment",
	"かんこうきゃく" : "tourist",
	"かんこうち" : "tourist spot",
	"かんしんがある" : "to be concerned about",
	"キウイ" : "kiwifruit",
	"きおん" : "temperature",
	"きこう" : "climate",
	"きっと" : "surely",
	"キャラクター" : "character",
	"きゅうりょう" : "salary",
	"きょうりょくする" : "to work together",
	"きをつける | 気をつける" : "to pay attention",
	"けいかく" : "plan",
	"けいかくをたてる" : "to make plans",
	"けいけん" : "experience",
	"けいけんする" : "to experience",
	"げんいん" : "cause",
	"こうがい" : "pollution",
	"こうじょう" : "factory",
	"こうずい" : "flood",
	"こうばん" : "police box",
	"こころ | 心" : "heart",
	"こと" : "matter",
	"こまる" : "to be troubled",
	"こわれる" : "to break",
	"コンポスト" : "compost",
	"さがす" : "to look for",
	"さがる | 下がる" : "to lower",
	"さべつ" : "discrimination",
	"さべつする" : "to discriminate",
	"さんぎょう" : "industry",
	"さんせいする" : "to agree",
	"ジェンダー" : "gender",
	"じしん" : "earthquake",
	"しゅと" : "capital city",
	"しげん" : "resource",
	"しぜん" : "nature",
	"しま | 島" : "island",
	"しまぐに | 島国" : "island country",
	"しゃかい | 社会" : "society",
	"じゆう | 自由" : "freedom",
	"しゅうきょう" : "religion",
	"じゅうぶん | 十分" : "enough",
	"じょうほう" : "information",
	"しょうらい" : "one’s future",
	"しらべる" : "to investigate",
	"じんこう | 人口" : "population",
	"せいかつする" : "to lead a life",
	"せいふ" : "government",
	"せかい" : "world",
	"せきにん" : "responsibility",
	"せだい" : "generation",
	"ぜったい(に)" : "definitely",
	"だいじにする" : "to value",
	"たいふう" : "typhoon",
	"たすけあう" : "to help each other",
	"ただ" : "free of charge",
	"たぶん" : "probably",
	"たぶんか | 多文化" : "multicultural",
	"ためる" : "to save",
	"だれか" : "someone",
	"だれでも" : "whoever",
	"だれも" : "no one",
	"ちきゅう" : "Earth",
	"ちほう" : "region",
	"つゆ" : "rainy season",
	"できるだけ" : "as much as possible",
	"でぐち | 出口" : "exit",
	"テクノロジー" : "technology",
	"とかい" : "urban area",
	"とくに" : "especially",
	"どこか" : "somewhere",
	"どこでも" : "anywhere",
	"どこも" : "nowhere",
	"どりょくする" : "to make an effort",
	"なおす" : "repair",
	"なにか | 何か" : "something",
	"なにも | 何も" : "nothing",
	"なんでも | 何でも" : "anything",
	"について" : "regarding",
	"によって" : "depending on",
	"のかわりに" : "instead of",
	"のりかえる" : "to change",
	"はくぶつかん" : "museum",
	"はっきり" : "clearly",
	"はんたい" : "opposite",
	"はんたいする" : "to oppose",
	"ビジネス" : "business",
	"ひろう" : "pick up",
	"ふる" : "to fall",
	"フレンドリー（な）" : "friendly",
	"へいわ | 平和" : "peace",
	"ポップカルチャー" : "pop culture",
	"みつける | 見つける" : "to find",
	"もういちど" : "once more",
	"もつ" : "to have",
	"もの" : "thing",
	"やっぱり" : "as I thought",
	"やる" : "to do",
	"ゆめ" : "dream",
	"ロボット" : "robot",
	"わける | 分ける" : "to divide"
}

var list = {}
var current_word = ""

# Called when the node enters the scene tree
func _ready():
	# Connect the confirm and submit buttons
	$ConfirmButton.pressed.connect(_on_confirm_pressed)
	$SubmitButton.pressed.connect(_on_submit_pressed)
	
	# Initially hide quiz UI until list is selected
	$SubmitButton.visible = false
	$QuestionLabel.visible = false
	$AnswerInput.visible = false
	$ResultLabel.visible = false

func _on_confirm_pressed():
	var SelectedList = $ListSelect.text
	
	if SelectedList == "1":
		list = list1
	elif SelectedList == "2":
		list = list2
	elif SelectedList == "3":
		list = list3
	else:
		$ResultLabel.text = "Invalid list number. Enter 1 or 2."
		$ResultLabel.visible = true
		return
		
	# Hide selection UI
	$ListSelect.visible = false
	$ConfirmButton.visible = false

	# Show quiz UI
	$SubmitButton.visible = true
	$QuestionLabel.visible = true
	$AnswerInput.visible = true
	$ResultLabel.visible = true

	ask_question()


# Function to ask a new word question
func ask_question():
	var word_keys = list.keys()
	var random_index = randi() % word_keys.size()
	current_word = word_keys[random_index]
	
	# Update UI
	$QuestionLabel.text = "%s" % current_word
	$AnswerInput.text = ""
	$ResultLabel.text = ""

# Called when the submit button is pressed
func _on_submit_pressed():
	var user_answer = $AnswerInput.text.strip_edges().to_lower()
	var correct_answer = list[current_word]
	
	if user_answer == correct_answer:
		$ResultLabel.text = "Correct!"
		correct_answers += 1
	else:
		$ResultLabel.text = "Wrong! Correct answer: %s" % correct_answer
	
	if correct_answers == 3:
		await get_tree().create_timer(3).timeout
		emit_signal("flashcards_done")
		correct_answers = 0
	if correct_answers < 3:
		await get_tree().create_timer(3).timeout
		ask_question()
